# Comfyui-Workflow-Snapshot-Manager

./: LICENSE  README.md  __init__.py  pyproject.toml  snapshot_node.py  snapshot_routes.py  snapshot_storage.py
.github/workflows/: publish.yml
docs/plans/: 2026-04-03-ux-rework-design.md  2026-04-03-ux-rework-plan.md  2026-06-29-nondestructive-timeline-research-and-plan.md
js/: snapshot_manager.js
